--- a/.github/workflows/auto_create_staging_pr.yml
+++ b/.github/workflows/auto_create_staging_pr.yml
@@ -2,22 +2,35 @@ name: Auto Create PR to staging from feature branch
 
 on:
   pull_request:
-    types: [opened]
-    branches:
-      - develop
+    types: [ opened ]
+    branches: [ develop ]
 
 jobs:
-  create_staging_pr:
+  action:
     runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
 
-    - name: Create PR to staging
-      uses: repo-sync/pull-request@v2
-      with:
-        source_branch: ${{ github.head_ref }}
-        destination_branch: "staging"
-        pr_title: "${{ github.event.pull_request.title }}(staging用)"
-        pr_body: "Automated PR. Original PR is ${{ github.event.pull_request.html_url }}"
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set variables
+        run: |
+          echo 'PR_BODY<<EOF' >> $GITHUB_ENV
+          echo "the same as #${{ github.event.pull_request.number }}" >> $GITHUB_ENV
+          echo "" >> $GITHUB_ENV
+          echo "---" >> $GITHUB_ENV
+          echo "" >> $GITHUB_ENV
+          echo "${{ github.event.pull_request.body }}" >> $GITHUB_ENV
+          echo 'EOF' >> $GITHUB_ENV
+      - name: pull-request
+        uses: repo-sync/pull-request@v2
+        with:
+          source_branch: "${{ github.event.pull_request.head.ref }}"
+          destination_branch: staging
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          pr_label: staging
+          pr_title: "${{ github.event.pull_request.title }}"
+          pr_body : |
+            ${{ env.PR_BODY }}
+      - name: Labeling
+        uses: andymckay/labeler@master
+        with:
+          add-labels: "develop"
