--- a/.github/workflows/git_pr_release.yml
+++ b/.github/workflows/git_pr_release.yml
@@ -23,4 +23,4 @@ jobs:
           GIT_PR_RELEASE_BRANCH_STAGING: develop
           GIT_PR_RELEASE_LABELS: release-pr
           TZ: Asia/Tokyo
-          # GIT_PR_RELEASE_TEMPLATE: .github/git-pr-release.erb
+          GIT_PR_RELEASE_TEMPLATE: .github/git_pr_release.erb
