allow unrelated histories

--- a/.github/workflows/auto_create_staging_pr.yml
+++ b/.github/workflows/auto_create_staging_pr.yml
@@ -14,7 +14,7 @@ jobs:
         run: |
           git fetch origin staging:staging
           git checkout -b ${{ github.event.pull_request.head.ref }}-stg
-          git merge staging
+          git merge staging --allow-unrelated-histories
           git push origin ${{ github.event.pull_request.head.ref }}-stg
       - name: Add Label
         uses: andymckay/labeler@1.0.4
