--- a/.github/workflows/auto_create_staging_pr.yml
+++ b/.github/workflows/auto_create_staging_pr.yml
@@ -12,6 +12,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Create and push -stg branch
         run: |
+          git config user.name "GitHub Actions"
+          git config user.email "github-actions@example.com"
           git fetch origin staging:staging
           git checkout -b ${{ github.event.pull_request.head.ref }}-stg
           git merge staging --allow-unrelated-histories
