--- a/.github/workflows/sync_to_stg_branch.yml
+++ b/.github/workflows/sync_to_stg_branch.yml
@@ -17,9 +17,11 @@ jobs:
           git config user.name "GitHub Actions"
           git config user.email "github-actions@example.com"
           original_branch=${GITHUB_REF#refs/heads/}
+          echo "Original branch: $original_branch"
           stg_branch="${original_branch}-stg"
-          git fetch origin $original_branch
+          echo "Staging branch: $stg_branch"
           git fetch origin $stg_branch:$stg_branch || { echo "$stg_branch does not exist, skipping."; exit 0; }
+          git fetch origin $original_branch
           git checkout $stg_branch
-          git rebase $original_branch || { echo 'Rebase conflict!'; exit 1; }
-          git push origin $stg_branch --force-with-lease
+          git merge git merge --strategy=recursive $original_branch --allow-unrelated-histories
+          git push origin $stg_branch
