--- a/.github/workflows/sync_to_stg_branch.yml
+++ b/.github/workflows/sync_to_stg_branch.yml
@@ -23,5 +23,7 @@ jobs:
           git checkout $stg_branch
           git branch -a
           git status
-          git merge --strategy=recursive $original_branch --allow-unrelated-histories
+          git log $original_branch
+          git log $stg_branch
+          git merge --strategy=recursive origin/$original_branch --allow-unrelated-histories
           git push origin $stg_branch
