--- a/.github/workflows/sync_to_stg_branch.yml
+++ b/.github/workflows/sync_to_stg_branch.yml
@@ -24,5 +24,7 @@ jobs:
           git branch -a
           git status
           git diff
+          git reset --hard origin/$original_branch
+          git push -f origin $stg_branch
           git merge --strategy=recursive origin/$original_branch --allow-unrelated-histories
           git push origin $stg_branch
