--- a/.github/workflows/sync_to_stg_branch.yml
+++ b/.github/workflows/sync_to_stg_branch.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Sync to -stg branch (if exists)
         run: |
           # Setup Git
-          git config user.name "GitHub Actions"
-          git config user.email "github-actions@example.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
           # Define branch names
           original_branch=${GITHUB_REF#refs/heads/}
