--- a/.github/workflows/sync_to_stg_branch.yml
+++ b/.github/workflows/sync_to_stg_branch.yml
@@ -33,7 +33,8 @@ jobs:
 
           # Try to merge staging and catch any merge failures
           git fetch origin staging:staging
-          if git merge --strategy=resolve --allow-unrelated-histories staging; then
+          git fetch origin $stg_branch:$stg_branch
+          if git merge --allow-unrelated-histories staging; then
             echo "stagingブランチを$stg_branchブランチにマージしました。"
             git push origin $stg_branch
           else
