--- a/.github/workflows/sync_to_stg_branch.yml
+++ b/.github/workflows/sync_to_stg_branch.yml
@@ -27,19 +27,11 @@ jobs:
           git fetch origin $stg_branch:$stg_branch || { echo "$stg_branch が存在しないのでスキップします"; exit 0; }
           git checkout $stg_branch
 
-          # original_branchに加えた変更をstg_branchに完全に同期する(mergeやrebaseだとどうしてもconflictになるためreset --hard)
-          git reset --hard origin/$original_branch
-          git push -f origin $stg_branch
-
           # Try to merge staging and catch any merge failures
-          git fetch origin staging:staging
-          git checkout staging
-          git fetch origin $stg_branch:$stg_branch
-          git checkout $stg_branch
-          if git merge --allow-unrelated-histories staging; then
-            echo "stagingブランチを$stg_branchブランチにマージしました。"
-            git push origin $stg_branch
+          git fetch origin $original_branch:$original_branch
+          if git merge -X theirs $original_branch --allow-unrelated-histories; then
+            echo "$original_branchブランチを$stg_branchブランチにマージしました。"
           else
-            echo "stagingブランチを$stg_branchブランチにマージできませんでした。手動でコンフリクトを解消してください。"
-            exit 0
+            echo "$original_branchブランチを$stg_branchブランチにマージできませんでした。手動でコンフリクトを解消してください。"
           fi
+          git push origin $stg_branch
